--- a/text-to-bpmn/package.json
+++ b/text-to-bpmn/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
+    "openai": "^4.54.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
