--- a/text-to-bpmn/package.json
+++ b/text-to-bpmn/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.5",
     "openai": "^4.54.0",
     "react": "^18",
+    "react-bpmn": "^0.2.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
