--- a/text-to-bpmn/package.json
+++ b/text-to-bpmn/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "xmlbuilder2": "^3.1.1"
+    "xmlbuilder2": "^3.1.1",
+    "xmldom": "^0.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
