--- a/text-to-bpmn/package.json
+++ b/text-to-bpmn/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "bpmn-auto-layout": "^0.5.0",
     "bpmn-js": "^17.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
